# caudalflow

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  README_CN.md  package-lock.json  package.json  vercel.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
.planning/: PROJECT.md
.planning/phases/01-typescript-agent/: 01-PLAN.md  01-SUMMARY.md
agent/: README.md  langgraph.json  main.py  pyproject.toml
agent/src/: __init__.py  prompts.py  runtime.py
apps/: README.md
apps/agent/: README.md  main.py  pyproject.toml
apps/agent/src/: prompts.py  runtime.py
apps/agent/tests/: test_prompts.py  test_runtime.py
apps/bff/: README.md
apps/bff/src/: server-new.ts  server-old.ts  server.ts
apps/mcp/: README.md
src/: App.tsx  index.css  main.tsx
src/components/canvas/: Canvas.tsx  CanvasControls.tsx  MergeSelectionPopup.tsx
src/components/copilot/: BranchProposalCard.tsx  CanvasCopilotBridge.tsx  ChartRenderer.tsx  CopilotKitProviderShell.tsx  CustomCopilotChat.tsx  canvasAgentState.ts  canvasHandlers.ts
src/components/edges/: TopicEdge.tsx
src/components/nodes/: ChatInput.tsx  ChatMessage.tsx  ChatMessageList.tsx  ChatNode.tsx  ChatNodeDeleteConfirmation.tsx  ChatNodeHeader.tsx  SelectionPopup.tsx
src/components/ui/: HelpGuide.tsx  SettingsPanel.tsx  Tooltip.tsx  WelcomePopup.tsx  WorkspaceSelector.tsx
src/hooks/: useNodeCopilotChat.ts  usePersistence.ts
src/i18n/locales/: en.json  zh.json
src/services/: llm.ts
src/stores/: chatStore.ts  flowStore.ts  settingsStore.ts  workspaceStore.ts
src/types/: chat.ts
(+11 files in other folders)
