[project]
name = "caudalflow-agent"
version = "0.1.0"
description = "CopilotKit + AG-UI LangGraph agent for CaudalFlow."
requires-python = ">=3.11"
dependencies = [
    "copilotkit>=0.1.0",
    "deepagents>=0.0.1",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langgraph>=0.2.0",
    "langgraph-cli[inmem]>=0.2.0",
    "python-dotenv>=1.0.0",
    "typing-extensions>=4.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
